Header and navigation

--- a/src/main/react/src/App.css
+++ b/src/main/react/src/App.css
@@ -1,4 +1,4 @@
-/* @import '~@trussworks/react-uswds/lib/index.css'; */
+/* @import '~@trussworks/react-uswds/lib/index.css';
 
 
 #root {
@@ -42,4 +42,4 @@
 
 .read-the-docs {
   color: #888;
-}
+} */
