front end fixes

--- a/src/main/react/output.css
+++ b/src/main/react/output.css
@@ -606,6 +606,10 @@ video {
   align-items: center;
 }
 
+.items-baseline {
+  align-items: baseline;
+}
+
 .justify-between {
   justify-content: space-between;
 }
@@ -657,6 +661,10 @@ video {
 
 .text-center {
   text-align: center;
+}
+
+.align-top {
+  vertical-align: top;
 }
 
 .shadow-lg {
